--- a/index.html
+++ b/index.html
@@ -9,81 +9,29 @@
 </head>
 
 <body>
-  <div id="main">
-    <div id="header">
-      <div id="logo">
-        <div id="logo_text">
-          <!-- class="logo_colour", allows you to change the colour of the text -->
-          <h1><a href="index.html"><!-- Meu nome --><span class="logo_colour"><!-- texto --></span></a></h1>
-          <h2>Emerson Hideki Higuchi</h2>
-        </div>
-      </div>
-    </div>
+  <header>
 
-    <div id="content_header"></div>
-    <div id="site_content">
+  </header>
 
-      <div id="content">
-        <!-- insert the page content here -->
-        <div class="impar">
+  <div id="c1">
 
-          <h1>Informações Pessoais</h1>
-          <div id="left_text">
-            <p>Endereço: Rua José Patricio no 257 E-mail: hideki-higuchi@outlook.com</p>
-            <p>Bairro: Anchieta CEP: 09601-010</p>
-            <p>Cidade: São Bernardo do campo Estado: SP</p>
-            <p>Telefone: (11) 4368-8016 Celular: (11) 981169604</p>
-            <p>Data de Nascimento: 15/02/1995</p>
-            <p>Estado Civil: Solteiro</p>
-          </div>
-      </div>
-
-      <div class="par">
-
-        <h1>Informações Acadêmicas</h1>
-        <div id="left_text">
-        <p>Escola: Universidade Presbiteriana Mackenzie</p>
-        <p>Curso: Ciência da Computação</p>
-        <p>Ano/Semestre: 3º Semestre (Conclusão: 06/2018)</p>
-        <p>Período de Aula: Manhã</p>
-        <p>Cidade: São Paulo</p>
-        <p>Estado: SP</p>
-      </div>
-    </div>
-
-    <div class="impar">
-
-      <h1>Informações Adicionais</h1>
-      <div id="left_text">
-      <p>Conhecimentos: Inglês, Linux, Windows,
-        Microsoft Office, </p>
-        <p>
-        Libre Office, HTML, CSS, Java, C, C#, ShellScript
-      Python, SQL. </p>
-      <p>
-        Conceitos e Fundamentos: Lógica de Programação, Orientação a
-        Objetos e Swift EAD - Hackatruck.
-      </p>
-      </div>
   </div>
-        <div class="par">
-        <h1>Habilidades</h1>
 
-        <table style="width:100%; border-spacing:0;">
-          <tr><th>Item</th><th>Description</th></tr>
-          <tr><td>Item 1</td><td>Description of Item 1</td></tr>
-          <tr><td>Item 2</td><td>Description of Item 2</td></tr>
-          <tr><td>Item 3</td><td>Description of Item 3</td></tr>
-          <tr><td>Item 4</td><td>Description of Item 4</td></tr>
-        </table>
-      </div>
-      </div>
-    </div>
-    <div id="content_footer"></div>
+  <div id="c2">
 
-    <div id="footer">
-
-    </div>
   </div>
+
+  <div id="c3">
+
+  </div>
+
+  <div id="c4">
+
+  </div>
+
+  <footer>
+  </footer>
+
 </body>
+
 </html>
