--- a/index.html
+++ b/index.html
@@ -6,14 +6,34 @@
   <meta name="Hideki's Resume"/>
   <meta charset="utf-8"/>
   <link rel="stylesheet" type="text/css" href="style/style.css" title="style" />
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
   <header>
 
+    <div id="header_logo">
+
+    </div>
+
   </header>
 
   <div id="c1">
+
+    <div id="label_c1">
+      <h1>INFORMAÇÕES ACADÊMICAS</h1>
+    </div>
+
+    <div id="text_c1">
+
+      <p><b>UNIVERSIDADE PRESBITERIANA MACKENZIE</b></p>
+      <p>
+      Ciência da Computação<br>
+      3º Semestre (Conclusão: 06/2018)<br>
+      Matutino<br>
+      São Paulo/SP
+    </p>
+    </div>
 
   </div>
 
