--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="Hideki's Resume"/>
   <meta charset="utf-8"/>
   <link rel="stylesheet" type="text/css" href="style/style.css" title="style" />
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 
@@ -26,7 +27,7 @@
 
     <div id="text_c1">
 
-      <p><b>UNIVERSIDADE PRESBITERIANA MACKENZIE</b></p>
+      <p id="semi_title">UNIVERSIDADE PRESBITERIANA MACKENZIE</p>
       <p>
       Ciência da Computação<br>
       3º Semestre (Conclusão: 06/2018)<br>
@@ -39,6 +40,8 @@
 
   <div id="c2">
 
+
+
   </div>
 
   <div id="c3">
@@ -50,8 +53,16 @@
   </div>
 
   <footer>
+
   </footer>
 
 </body>
 
 </html>
+<!--
+  fonte box = 22 semi-bold
+
+  Sub titulo font = 14 semi-bold
+
+  <p> light 14
+-->
