--- a/index.html
+++ b/index.html
@@ -41,6 +41,55 @@
   <div id="c2">
 
 
+    <div id="label_c2">
+      <h1>HABILIDADES</h1>
+    </div>
+
+    <div id="skills">
+      <div id="skill_1">
+        <img src="style/2/icon/1.png" alt="my skill" />
+        <p>test</p>
+      </div>
+      <div id="skill_1">
+        <img src="style/2/icon/2.png" alt="my skill" />
+        <p>test</p>
+      </div>
+      <div id="skill_1">
+        <img src="style/2/icon/3.png" alt="my skill" />
+        <p>test</p>
+      </div>
+      <br>
+      <div id="skill_1">
+        <img src="style/2/icon/4.png" alt="my skill" />
+        <p>test</p>
+      </div>
+      <div id="skill_1">
+        <img src="style/2/icon/5.png" alt="my skill" />
+        <p>test</p>
+      </div>
+      <div id="skill_1">
+        <img src="style/2/icon/6.png" alt="my skill" />
+        <p>test</p>
+      </div>
+      <br>
+      <div id="skill_1">
+        <img src="style/2/icon/7.png" alt="my skill" />
+        <p>test</p>
+      </div>
+      <div id="skill_1">
+        <img src="style/2/icon/8.png" alt="my skill" />
+        <p>test</p>
+      </div>
+      <div id="skill_1">
+        <img src="style/2/icon/9.png" alt="my skill" />
+        <p>test</p>
+      </div>
+
+
+
+    </div>
+
+
 
   </div>
 
@@ -65,4 +114,14 @@
   Sub titulo font = 14 semi-bold
 
   <p> light 14
+
+
+  skill width 570px
+        circle 110px;
+        fonte e bolinha 66px;
+
+        label - 14 regular #df2121
+
+
+
 -->
