--- a/index.html
+++ b/index.html
@@ -46,43 +46,55 @@
     </div>
 
     <div id="skills">
-      <div id="skill_1">
-        <img src="style/2/icon/1.png" alt="my skill" />
-        <p>test</p>
+      <div id="skill_1_left">
+        <div id="circlebox">
+          <img src="style/2/icon/1.png" alt="my skill" />
+          <p>JAVA</p>
+        </div>
       </div>
       <div id="skill_1">
-        <img src="style/2/icon/2.png" alt="my skill" />
-        <p>test</p>
+          <img src="style/2/icon/2.png" alt="my skill" />
+          <p>C</p>
       </div>
-      <div id="skill_1">
-        <img src="style/2/icon/3.png" alt="my skill" />
-        <p>test</p>
+      <div id="skill_1_right">
+          <div id="circlebox_right">
+            <img src="style/2/icon/3.png" alt="my skill" />
+            <p>UNITY</p>
+          </div>
       </div>
       <br>
-      <div id="skill_1">
-        <img src="style/2/icon/4.png" alt="my skill" />
-        <p>test</p>
+      <div id="skill_1_left">
+        <div id="circlebox">
+          <img src="style/2/icon/4.png" alt="my skill" />
+          <p id="python">PYTHON</p>
+        </div>
       </div>
       <div id="skill_1">
         <img src="style/2/icon/5.png" alt="my skill" />
-        <p>test</p>
+        <p>SHELLSCRIPT</p>
       </div>
-      <div id="skill_1">
-        <img src="style/2/icon/6.png" alt="my skill" />
-        <p>test</p>
+      <div id="skill_1_right">
+        <div id="circlebox_right">
+          <img src="style/2/icon/6.png" alt="my skill" />
+          <p>CSS</p>
+        </div>
       </div>
       <br>
-      <div id="skill_1">
-        <img src="style/2/icon/7.png" alt="my skill" />
-        <p>test</p>
+      <div id="skill_1_left">
+        <div id="circlebox">
+          <img src="style/2/icon/7.png" alt="my skill" />
+          <p>HTML</p>
+        </div>
       </div>
       <div id="skill_1">
         <img src="style/2/icon/8.png" alt="my skill" />
-        <p>test</p>
+        <p>SQL</p>
       </div>
-      <div id="skill_1">
-        <img src="style/2/icon/9.png" alt="my skill" />
-        <p>test</p>
+      <div id="skill_1_right">
+        <div id="circlebox_right">
+          <img src="style/2/icon/9.png" alt="my skill" />
+          <p>INGLÊS</p>
+        </div>
       </div>
 
 
@@ -94,6 +106,17 @@
   </div>
 
   <div id="c3">
+    <div id="label_c3">
+      <h1>EXTRA</h1>
+
+      <p>
+      Ciência da Computação<br>
+      3º Semestre (Conclusão: 06/2018)<br>
+      Matutino<br>
+      São Paulo/SP
+    </p>
+
+    </div>
 
   </div>
 
